working on responsive

--- a/html/src/scss/modules/_donations.scss
+++ b/html/src/scss/modules/_donations.scss
@@ -4,10 +4,16 @@
 .donations {
 	text-align: center;
 	padding-bottom: 140px;
+	@include mq-down(sm) {
+		padding-bottom: 40px;
+	}
 }
 
 .donations__content {
 	padding: 0 74px;
+	@include mq-down(sm) {
+		padding: 0;
+	}
 }
 
 .donations__title {
@@ -16,10 +22,18 @@
 
 .donations__text {
 	margin-bottom: 98px;
+	@include mq-down(sm) {
+		margin-bottom: 36px;
+	}
 }
 
 .donations__logos {
 	font-size: 0;
+	@include mq-down(sm) {
+		display: flex;
+		flex-wrap: wrap;
+		margin: 0 -10px;
+	}
 }
 
 .donations__logo {
@@ -30,6 +44,12 @@
 	background: #fbfbfb;
 	border-radius: 10px;
 	margin: 0 10px;
+	@include mq-down(sm) {
+		flex: 1 1 calc(50% - 20px);
+		height: auto;
+		margin: 0 10px 14px;
+		max-width: calc(50% - 20px);
+	}
 }
 
 .donations__logo-img {
