--- a/html/src/scss/modules/_image-text.scss
+++ b/html/src/scss/modules/_image-text.scss
@@ -112,7 +112,7 @@
 		}
 	}
 	.image-text__content {
-		padding: 70px 0;
+		padding: 70px 0 40px;
 		max-width: 630px;
 	}
 	@include breakpoint(laptop) {
