--- a/html/src/scss/modules/_page-intro.scss
+++ b/html/src/scss/modules/_page-intro.scss
@@ -41,7 +41,7 @@
 		padding: 140px 0 80px 10px;
 	}
 	@include mq-down(sm) {
-		padding: 300px 0 20px;
+		padding: 80vw 0 20px;
 	}
 }
 
@@ -65,6 +65,7 @@
 	padding-top: 26px;
 	@include mq-down(sm) {
 		max-width: 100%;
+		margin-bottom: 10px;
 	}
 }
 
@@ -74,7 +75,7 @@
 	top: 10%;
 	left: 59%;
 	@include mq-down(sm) {
-		top: 80px;
+		top: 30px;
 		left: 55%;
 		transform: translateX(-50%);
 		width: 70vw;
@@ -102,6 +103,10 @@
 	width: 34.4799vw;
 	top: 10.1%;
 	left: 63.2%;
+	@include mq-down(sm) {
+		top: 0;
+		width: 70vw;
+	}
 }
 
 .page-intro__image--secondary {
