--- a/html/src/scss/modules/_text-image.scss
+++ b/html/src/scss/modules/_text-image.scss
@@ -3,14 +3,24 @@
 
 .text-image {
 	padding: 42px 0 164px;
+	@include mq-down(sm) {
+		padding-bottom: 42px;
+	}
 }
 
 .text-image__container {
 	position: relative;
 	padding: 0 30px;
+	@include mq-down(sm) {
+		padding: 80vw 0 0;
+	}
 }
+
 .text-image__content {
 	max-width: 44%;
+	@include mq-down(sm) {
+		max-width: 100%;
+	}
 }
 
 .text-image__image-outer {
@@ -18,6 +28,13 @@
 	top: 17px;
 	right: 6.5vw;
 	width: 26.39vw;
+	@include mq-down(sm) {
+		top: 0;
+		width: 80vw;
+		left: 50%;
+		right: auto;
+		transform: translateX(-50%);
+	}
 }
 
 .text-image__image {
