--- a/Patrija.Web/Views/Partials/NestedContent/_JoinUsForm.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_JoinUsForm.cshtml
@@ -5,7 +5,7 @@
 <div class="popup-overlay @(Model.IsVolunteer? "volunteer" : "member" )-popup">
     <div class="popup">
         <button class="popup__close-btn js-close-popup" type="button">
-            <span class="sr-only">@UmbracoDictionaryHelper.ScreenReaders.BtnClose</span>
+            <span class="sr-only">@UmbracoDictionary.ScreenReaders.BtnClose</span>
         </button>
         <div class="popup-form__container">
             <div class="popup-form__column">
