Updating hardcoded values

--- a/Patrija.Web/Views/Partials/NestedContent/_ContactForm.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_ContactForm.cshtml
@@ -11,11 +11,11 @@
     <div class="wrap wrap--normal">
         <div class="contact-form__content">
             <div class="contact-form__info">
-                <span class="contact-form__address-title">Adresa</span>
+                <span class="contact-form__address-title">@UmbracoDictionary.ContactUs.Address</span>
                 <p class="contact-form__address-details">
                     @Html.MultiLineText(Model.Address)
                 </p>
-                <span class="contact-form__address-title">Radno vreme</span>
+                <span class="contact-form__address-title">@UmbracoDictionary.ContactUs.WorkingHours</span>
                 <p class="contact-form__address-details">
                     @Html.MultiLineText(Model.WorkingHours)
                 </p>
