--- a/Patrija.Web/Views/Partials/Shared/_Article.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_Article.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Patrija.Core.ViewModels.Shared.ArticleViewModel
 
 <div class="news-slider__item">
-    <div class="news-slider__image has-cover" style="background-image: url('@Model.Image.Url');"></div>
+    <div class="news-slider__image has-cover"  style="@if (Model.Image != null) {<text>background-image: url('@Model.Image.Url');</text>}"></div>
     @if (Model.HasMetadata)
     {
         <div class="news-slider__meta">
