--- a/Patrija.Web/Views/News.cshtml
+++ b/Patrija.Web/Views/News.cshtml
@@ -1,27 +1,31 @@
 ﻿@inherits UmbracoViewPage<NewsViewModel>
 
-@if (Model.PageIntro != null)
-{
-    Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.PageIntro });
-}
-@if (Model.NewsBlogBlocks.Any())
-{
-    foreach (var block in Model.NewsBlogBlocks)
+<div class="js-newspage">
+
+    @if (Model.PageIntro != null)
     {
-        switch (block.DisplayVariant)
+        Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.PageIntro });
+    }
+    @if (Model.NewsBlogBlocks.Any())
+    {
+        foreach (var block in Model.NewsBlogBlocks)
         {
-            case Patrija.Core.ViewModels.Partials.News.DisplayVariant.LatestArticleInFocus:
-                Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockLatestArticleInFocus), new { viewModel = block });
-                break;
-            case Patrija.Core.ViewModels.Partials.News.DisplayVariant.TwoColumnThreeRows:
-                Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockTwoColumnThreeRows), new { viewModel = block });
-                break;
-            case Patrija.Core.ViewModels.Partials.News.DisplayVariant.ThreeColumnTwoRows:
-                Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockThreeColumnTwoRows), new { viewModel = block });
-                break;
-            default:
-                Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockLatestArticleInFocus), new { viewModel = block });
-                break;
+            switch (block.DisplayVariant)
+            {
+                case Patrija.Core.ViewModels.Partials.News.DisplayVariant.LatestArticleInFocus:
+                    Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockLatestArticleInFocus), new { viewModel = block });
+                    break;
+                case Patrija.Core.ViewModels.Partials.News.DisplayVariant.TwoColumnThreeRows:
+                    Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockTwoColumnThreeRows), new { viewModel = block });
+                    break;
+                case Patrija.Core.ViewModels.Partials.News.DisplayVariant.ThreeColumnTwoRows:
+                    Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockThreeColumnTwoRows), new { viewModel = block });
+                    break;
+                default:
+                    Html.RenderAction<NestedContentController>(c => nameof(c.NewsBlogBlockLatestArticleInFocus), new { viewModel = block });
+                    break;
+            }
         }
     }
-}
+
+</div>
