--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
@@ -22,7 +22,7 @@
             }
         </div>
         <div class="articles__buttons">
-            <button class="btn btn--mint articles__load-more" type="button">@Model.LoadMoreButtonText</button>
+            <button class="btn btn--mint articles__load-more" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
         </div>
     </div>
 </div>
