--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
@@ -24,7 +24,7 @@
         }
 
         <div class="news-list__buttons">
-            <button class="btn btn--mint news-list__load-more" type="button">@Model.LoadMoreButtonText</button>
+            <button class="btn btn--mint news-list__load-more" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
         </div>
     </div>
 </div>
