--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
@@ -1,42 +1,50 @@
 ﻿@model Patrija.Core.ViewModels.Shared.NewsBlogBlockViewModel
 
-@{
-    var featuredArticle = Model.Articles.First();
-}
-<div class="featured-news">
+<div class="featured-news" data-totalnumber="">
     <div class="wrap wrap--normal">
         <h2 class="h2 featured-news__title">@Model.BlogCategoryName</h2>
         <div class="featured-news__container">
-            <div class="featured-news__large">
-                <div class="featured-news__large-image has-cover"  style="@if (featuredArticle.Image != null) {<text>background-image: url('@featuredArticle.Image.Url');</text>}">
-                    <h3 class="h6 featured-news__large-title"><a href="javascript:;">@featuredArticle.Title</a></h3>
+            @if (Model.FeatureArticle != null)
+            {
+                <div class="featured-news__large">
+                    <div class="featured-news__large-image has-cover" style="@if (Model.FeatureArticle.Image != null) {<text>background-image: url('@Model.FeatureArticle.Image.Url');</text>}">
+                        <h3 class="h6 featured-news__large-title"><a href="@Model.FeatureArticle.Url">@Model.FeatureArticle.Title</a></h3>
+                    </div>
                 </div>
-            </div>
+            }
             <div class="featured-news__items">
-                @if(Model.Articles.Skip(1).Any()) {
-                <ul class="featured-news__items-list">
-                    @foreach (var article in Model.Articles.Skip(1))
-                    {
-                        <li class="featured-news__item">
-                            <div class="featured-news__item-img">
-                                <a href="javascript:;">
-                                    <span class="featured-news__item-image has-cover" style="@if (article.Image != null) {<text>background-image: url('@article.Image.Url');</text>}"></span>
-                                </a>
-                            </div>
-                            <div class="featured-news__item-content">
-                                <span class="featured-news__item-date">@article.DateOfPublishing</span>
-                                <h4 class="h6 featured-news__item-title">
-                                    <a href="javascript:;">@article.Title</a>
-                                </h4>
-                            </div>
-                        </li>
-                    }
-                </ul>
+                @if (Model.Articles.Any())
+                {
+                    <ul class="featured-news__items-list">
+                        @foreach (var article in Model.Articles)
+                        {
+                            <li class="featured-news__item">
+                                <div class="featured-news__item-img">
+                                    <a href="javascript:;">
+                                        <span class="featured-news__item-image has-cover" style="@if (article.Image != null) {<text>background-image: url('@article.Image.Url');</text>}"></span>
+                                    </a>
+                                </div>
+                                <div class="featured-news__item-content">
+                                    <span class="featured-news__item-date">@article.DateOfPublishing</span>
+                                    @if (!string.IsNullOrWhiteSpace(article.Title))
+                                    {
+                                        <h4 class="h6 featured-news__item-title">
+                                            <a href="@article.Url">@article.Title</a>
+                                        </h4>
+                                    }
+                                </div>
+                            </li>
+                        }
+                    </ul>
                 }
             </div>
         </div>
-        <div class="featured-news__buttons">
-            <button class="btn btn--mint featured-news__load-more" type="button">@Model.LoadMoreButtonText</button>
-        </div>
+        @if (Model.TotalNumberOfExistingArticles > Model.NumberOfArticlesOnLoad)
+        {
+            <div class="featured-news__buttons">
+                <button class="btn btn--mint featured-news__load-more" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
+            </div>
+        }
+
     </div>
 </div>
