--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
@@ -4,11 +4,14 @@
     <div class="wrap wrap--normal">
         <h2 class="h2 featured-news__title">@Model.BlogCategoryName</h2>
         <div class="featured-news__container">
-            @if (Model.FeatureArticle != null)
+            @if (Model.FeatureArticle != null && Model.FeatureArticle.BlogIntro != null)
             {
                 <div class="featured-news__large">
-                    <div class="featured-news__large-image has-cover" style="@if (Model.FeatureArticle.Image != null) {<text>background-image: url('@Model.FeatureArticle.Image.Url');</text>}">
-                        <h3 class="h6 featured-news__large-title"><a href="@Model.FeatureArticle.Url">@Model.FeatureArticle.Title</a></h3>
+                    <div class="featured-news__large-image has-cover" style="@if (Model.FeatureArticle.BlogIntro.Image != null) {<text>background-image: url('@Model.FeatureArticle.BlogIntro.Image.Url');</text>}">
+                        @if (!string.IsNullOrWhiteSpace(Model.FeatureArticle.BlogIntro.Title))
+                        {
+                            <h3 class="h6 featured-news__large-title"><a href="@Model.FeatureArticle.Url">@Model.FeatureArticle.BlogIntro.Title</a></h3>
+                        }
                     </div>
                 </div>
             }
@@ -18,22 +21,25 @@
                     <ul class="featured-news__items-list">
                         @foreach (var article in Model.Articles)
                         {
-                            <li class="featured-news__item">
-                                <div class="featured-news__item-img">
-                                    <a href="javascript:;">
-                                        <span class="featured-news__item-image has-cover" style="@if (article.Image != null) {<text>background-image: url('@article.Image.Url');</text>}"></span>
-                                    </a>
-                                </div>
-                                <div class="featured-news__item-content">
-                                    <span class="featured-news__item-date">@article.DateOfPublishing</span>
-                                    @if (!string.IsNullOrWhiteSpace(article.Title))
-                                    {
-                                        <h4 class="h6 featured-news__item-title">
-                                            <a href="@article.Url">@article.Title</a>
-                                        </h4>
-                                    }
-                                </div>
-                            </li>
+                            if (article.BlogIntro != null)
+                            {
+                                <li class="featured-news__item">
+                                    <div class="featured-news__item-img">
+                                        <a href="@article.Url">
+                                            <span class="featured-news__item-image has-cover" style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></span>
+                                        </a>
+                                    </div>
+                                    <div class="featured-news__item-content">
+                                        <span class="featured-news__item-date">@article.BlogIntro.PublishDate</span>
+                                        @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
+                                        {
+                                            <h4 class="h6 featured-news__item-title">
+                                                <a href="@article.Url">@article.BlogIntro.Title</a>
+                                            </h4>
+                                        }
+                                    </div>
+                                </li>
+                            }
                         }
                     </ul>
                 }
@@ -45,6 +51,5 @@
                 <button class="btn btn--mint featured-news__load-more" type="button">@UmbracoDictionary.News.LoadMoreButton</button>
             </div>
         }
-
     </div>
 </div>
