--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
@@ -9,13 +9,13 @@
                 <div class="articles__item">
                     <div class="articles__item-img">
                         <a href="javascript:;">
-                            <span class="articles__item-image has-cover"  style="@if (article.Image != null) {<text>background-image: url('@article.Image.Url');</text>}"></span>
+                            <span class="articles__item-image has-cover"  style="@if (article.BlogIntro.Image != null) {<text>background-image: url('@article.BlogIntro.Image.Url');</text>}"></span>
                         </a>
                     </div>
                     <div class="articles__item-content">
-                        <span class="articles__item-date">@article.DateOfPublishing</span>
+                        <span class="articles__item-date">@article.BlogIntro.PublishDate</span>
                         <h4 class="h6 articles__item-title">
-                            <a href="javascript:;">@article.Title</a>
+                            <a href="javascript:;">@article.BlogIntro.Title</a>
                         </h4>
                     </div>
                 </div>
