--- a/html/src/scss/modules/_news-list.scss
+++ b/html/src/scss/modules/_news-list.scss
@@ -15,6 +15,10 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	@include mq-down(sm) {
+		display: block;
+		padding: 0;
+	}
 }
 
 .news-list__item {
@@ -22,6 +26,12 @@
 	margin-bottom: 64px;
 	flex: 1 1 33.333%;
 	max-width: 33.333%;
+	@include mq-down(sm) {
+		max-width: 100%;
+		display: block;
+		padding: 0;
+		margin-bottom: 25px;
+	}
 }
 
 .news-list__image {
@@ -30,6 +40,9 @@
 	padding-bottom: 66%;
 	border-radius: 15px;
 	margin-bottom: 18px;
+	@include mq-down(sm) {
+		margin-bottom: 10px;
+	}
 }
 
 .news-list__meta {
@@ -48,6 +61,9 @@
 	color: $grey;
 	line-height: 18px;
 	display: block;
+	@include mq-down(sm) {
+		font-size: 12px;
+	}
 }
 
 .news-list__text {
