--- a/html/src/scss/modules/_articles.scss
+++ b/html/src/scss/modules/_articles.scss
@@ -5,11 +5,20 @@
 	padding-top: 196px;
 	padding-bottom: 180px;
 	margin-bottom: 90px;
+	@include mq-down(sm) {
+		padding-top: 20px;
+		padding-bottom: 40px;
+		margin-bottom: 20px;
+	}
 }
 
 .articles__title {
 	padding: 0 94px;
 	margin-bottom: 58px;
+	@include mq-down(sm) {
+		padding: 0;
+		margin-bottom: 40px;
+	}
 }
 
 .articles__container {
@@ -18,6 +27,10 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	@include mq-down(sm) {
+		padding: 0;
+		display: block;
+	}
 }
 
 .articles__item {
@@ -26,6 +39,11 @@
 	margin-bottom: 25px;
 	flex: 1 1 50%;
 	max-width: 50%;
+	@include mq-down(sm) {
+		max-width: 100%;
+		display: block;
+		padding: 0;
+	}
 }
 
 .articles__item-image {
@@ -42,6 +60,10 @@
 	vertical-align: top;
 	display: inline-block;
 	width: 246px;
+	@include mq-down(sm) {
+		width: 100%;
+		display: block;
+	}
 }
 
 .articles__item-content {
@@ -49,10 +71,18 @@
 	vertical-align: top;
 	display: inline-block;
 	width: calc(100% - 276px);
+	@include mq-down(sm) {
+		width: 100%;
+		display: block;
+		padding-top: 8px;
+	}
 }
 
 .articles__item-title {
 	line-height: 25px;
+	@include mq-down(sm) {
+		line-height: 22px;
+	}
 }
 
 .articles__item-date {
@@ -60,6 +90,11 @@
 	line-height: 22px;
 	display: block;
 	padding: 4px 2px 6px;
+	@include mq-down(sm) {
+		font-size: 12px;
+		line-height: 18px;
+		padding: 4px 2px;
+	}
 }
 
 .articles__buttons {
