--- a/html/src/scss/modules/_featured-news.scss
+++ b/html/src/scss/modules/_featured-news.scss
@@ -8,6 +8,9 @@
 .featured-news__title {
 	padding: 0 94px;
 	margin-bottom: 35px;
+	@include mq-between(md, lg) {
+		padding: 0 10px;
+	}
 	@include mq-down(sm) {
 		padding: 0;
 	}
@@ -18,8 +21,10 @@
 	margin-bottom: 50px;
 	display: flex;
 	justify-content: space-between;
-	@include mq-down(sm) {
+	@include mq-down(lg) {
 		padding: 0;
+	}
+	@include mq-down(md) {
 		display: block;
 	}
 }
@@ -29,10 +34,13 @@
 	padding: 0 15px;
 	flex: 1 1 57%;
 	max-width: 57%;
-	@include mq-down(sm) {
+	@include mq-down(md) {
 		flex: 1 1 100%;
 		max-width: 100%;
 		padding: 0;
+	}
+	@include mq-only(md) {
+		margin-bottom: 24px;
 	}
 }
 
@@ -61,7 +69,7 @@
 	padding: 0 15px;
 	flex: 1 1 43%;
 	max-width: 43%;
-	@include mq-down(sm) {
+	@include mq-down(md) {
 		flex: 1 1 100%;
 		max-width: 100%;
 		padding: 0;
