Started implementing "LoadMore btn" on News Page; Featured BlogArticles part

--- a/Patrija.Web/Views/News.cshtml
+++ b/Patrija.Web/Views/News.cshtml
@@ -1,6 +1,6 @@
 ﻿@inherits UmbracoViewPage<NewsViewModel>
 
-<div class="js-newspage">
+<div class="js-newspage" data-page-id="@Model.PageId">
 
     @if (Model.PageIntro != null)
     {
