Updated BlogIntroViewModel - DateFormated

--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockLatestArticleInFocus.cshtml
@@ -31,7 +31,7 @@
                                         </a>
                                     </div>
                                     <div class="featured-news__item-content">
-                                        <span class="featured-news__item-date">@article.BlogIntro.PublishDate</span>
+                                        <span class="featured-news__item-date">@article.BlogIntro.FormatedPublishDate</span>
                                         @if (!string.IsNullOrWhiteSpace(article.BlogIntro.Title))
                                         {
                                             <h4 class="h6 featured-news__item-title">
