Updated _NewsBlogBlockThreeColumnTwoRows.cshtml and _NewsBlogBlockTwoColumnThreeRows.cshtml - date format

--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockThreeColumnTwoRows.cshtml
@@ -13,7 +13,7 @@
                         </a>
                     </div>
                     <div class="articles__item-content">
-                        <span class="articles__item-date">@article.BlogIntro.PublishDate</span>
+                        <span class="articles__item-date">@article.BlogIntro.FormatedPublishDate</span>
                         <h4 class="h6 articles__item-title">
                             <a href="javascript:;">@article.BlogIntro.Title</a>
                         </h4>
