--- a/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_NewsBlogBlockTwoColumnThreeRows.cshtml
@@ -11,7 +11,7 @@
                 <div class="news-list__item">
                     <div class="news-list__image has-cover" style="background-image: url('@article.BlogIntro.Image.Url');"></div>
                     <div class="news-list__meta">
-                        <span class="news-list__date">@article.BlogIntro.PublishDate</span>
+                        <span class="news-list__date">@article.BlogIntro.FormatedPublishDate</span>
                     </div>
                     <h4 class="h6 news-list__item-title">
                         <a href="javascript:;">@article.BlogIntro.Title </a>
